# HPS-Cholesky

./: .gitignore  ARMcholesky.txt  CMakeLists.txt  README.md  SuiteCholesky.txt  UFdata_name.txt  alldata_gamma.txt  allgendata_name.txt  correctdata855.txt  delete.txt  hnuLapack.pc.in  runtest.py  sparse_choltest
TPSM_v2.6/: Makefile  get_plat.sh  test.c  tgemm.xls  xdtst
TPSM_v2.6/include/: Numainfo.h  tpsm.h  tpsm_sysinfo.h
TPSM_v2.6/src/: tpsm_buffer.c
cmake/: check.cmake  variables.cmake
sparse/: CMakeLists.txt  GCNdata_write.txt  README.md  alldata.txt  testChol.sh  writeG.sh
sparse/include/: Sparse.h  SparseChol.h  SparseCore.h  SparseLU.h  SparseLU_internal.h  SparseQR.h  SparseQR_definitions.h  SparseQR_internal.h  SparseQR_struct.h  Sparse_amd_internal.h  Sparse_partition.h
sparse/include/plu/: plu_api.h  plu_atomic.h  plu_common.h  plu_dlrcores.h  plu_flops.h  plu_frobeniusupdate.h  plu_numeric.h  plu_solver.h  plu_spm.h  plu_symbol.h
sparse/src/base/: Makefile  SparseBase_config.c  amd.c  colamd.c
sparse/src/chol/: License.txt  Makefile  SparseChol_analyze.c  SparseChol_factorize.c  SparseChol_super_numeric.c  SparseChol_super_symbolic.c
sparse/src/core/: Makefile  SparseCore_common.c  SparseCore_metis.c  SparseCore_read_write.c  SparseCore_t_triplet.c
sparse/test/: choltest.c  cholwrite.c  lqtest.c  lutest.c  qrtest.c
